--- a/2020-08-25 JS_DOM/index.html
+++ b/2020-08-25 JS_DOM/index.html
@@ -24,7 +24,7 @@
     <button onclick="consola()"> Consoloa </button>
 
     <br>  <br>
-
+lista
     <img src="batman.jpg" width="300px" height="100px" alt="" id="logo">
 
         <div class="box" id="box"></div>
@@ -44,6 +44,15 @@
           <div class="miniCaja">8</div>
           <div class="miniCaja">9</div>
     </div>
+
+<br>
+<input type="text" id="texto">
+<br>
+<button id="agregar">Agregar</button>
+<br>
+<ol id="lista">
+
+</ol>
 
     <script src="./script.js"></script>
 </body>
